fixed background clipping

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,11 +17,19 @@
     transition: all ease-in-out 0.3s;
 }
 
+.background{
+    background-color: var(--back-color);
+    position: fixed;
+    z-index: -100;
+    width: 100%;
+    height: 100vh;
+}
+
 .light-mode{
     --back-color: #fff;
     --primary: #ADA2FF;
     --secondary: #e9e6ff;
-    background-color: #fff;
+
     --text-color: #2d2d2d;
     color: #2d2d2d;
 
